{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 55,
  "lineage": "5e6fcd5a-0020-e32c-31cf-3061a1fe0387",
  "resources": [
    {
      "module": "module.project_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:security-group/sg-05e81944aefe64b87",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05e81944aefe64b87",
            "ingress": [],
            "name": "project-cluster-cluster-20240825050027040600000007",
            "name_prefix": "project-cluster-cluster-",
            "owner_id": "823796879023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-cluster-cluster"
            },
            "tags_all": {
              "Name": "project-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.project_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:security-group/sg-0352aa211aa29110e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0352aa211aa29110e",
            "ingress": [],
            "name": "project-cluster-node-20240825050026677700000006",
            "name_prefix": "project-cluster-node-",
            "owner_id": "823796879023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-cluster-node",
              "kubernetes.io/cluster/project-cluster": "owned"
            },
            "tags_all": {
              "Name": "project-cluster-node",
              "kubernetes.io/cluster/project-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.project_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3925869117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05e81944aefe64b87",
            "security_group_rule_id": "sgr-0a509bb9373a3a42d",
            "self": false,
            "source_security_group_id": "sg-0352aa211aa29110e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.project_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4223361238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-066a97e7921309fb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3449485097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0a32e570098d0e95f",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1484746412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0c85b42db8e686acd",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2436696378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-08f028b42b8a4d211",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2187408667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0f46e09941c421b16",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3871344336",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0628f690a393e5e48",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-742288169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-09271bf58749b856b",
            "self": false,
            "source_security_group_id": "sg-05e81944aefe64b87",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2842229504",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0bb7da90675dcce06",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2837820752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0d29f607ec708bc23",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-226105023",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0352aa211aa29110e",
            "security_group_rule_id": "sgr-0fb5e46da9027587e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_eks.aws_security_group.cluster",
            "module.project_eks.aws_security_group.node",
            "module.project_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:network-acl/acl-055420aa69e6dce14",
            "default_network_acl_id": "acl-055420aa69e6dce14",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-055420aa69e6dce14",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "823796879023",
            "subnet_ids": [
              "subnet-002dad8495f0c9000",
              "subnet-05cf9d7348b0f5226",
              "subnet-06f2778a9803bbf54",
              "subnet-0e8a1e3dbc25c6da3"
            ],
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:route-table/rtb-02f4dffc1e68c75ec",
            "default_route_table_id": "rtb-02f4dffc1e68c75ec",
            "id": "rtb-02f4dffc1e68c75ec",
            "owner_id": "823796879023",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:security-group/sg-062fac126ff56817c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-062fac126ff56817c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "823796879023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03864a00f14966c2a",
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:elastic-ip/eipalloc-03864a00f14966c2a",
            "domain": "vpc",
            "id": "eipalloc-03864a00f14966c2a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-203-4-149.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.4.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "project-vpc-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.project_vpc.aws_internet_gateway.this",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:internet-gateway/igw-04b54859a3a5752f1",
            "id": "igw-04b54859a3a5752f1",
            "owner_id": "823796879023",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03864a00f14966c2a",
            "association_id": "eipassoc-0e591467098cad467",
            "connectivity_type": "public",
            "id": "nat-0d69bb06d9ccc85e3",
            "network_interface_id": "eni-0564620dcda011859",
            "private_ip": "10.0.1.61",
            "public_ip": "43.203.4.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8a1e3dbc25c6da3",
            "tags": {
              "Name": "project-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "project-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.project_vpc.aws_eip.nat",
            "module.project_vpc.aws_internet_gateway.this",
            "module.project_vpc.aws_subnet.public",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a135a312f8e804f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d69bb06d9ccc85e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a135a312f8e804f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_eip.nat",
            "module.project_vpc.aws_internet_gateway.this",
            "module.project_vpc.aws_nat_gateway.this",
            "module.project_vpc.aws_route_table.private",
            "module.project_vpc.aws_subnet.public",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b54859a3a5752f1",
            "id": "r-rtb-05255e2b1afa567d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05255e2b1afa567d3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_internet_gateway.this",
            "module.project_vpc.aws_route_table.public",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:route-table/rtb-04a135a312f8e804f",
            "id": "rtb-04a135a312f8e804f",
            "owner_id": "823796879023",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-vpc-private"
            },
            "tags_all": {
              "Name": "project-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:route-table/rtb-05255e2b1afa567d3",
            "id": "rtb-05255e2b1afa567d3",
            "owner_id": "823796879023",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-vpc-public"
            },
            "tags_all": {
              "Name": "project-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0010ba6d9fd5264d1",
            "route_table_id": "rtb-04a135a312f8e804f",
            "subnet_id": "subnet-06f2778a9803bbf54"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.private",
            "module.project_vpc.aws_subnet.private",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d7496c797a350a8",
            "route_table_id": "rtb-04a135a312f8e804f",
            "subnet_id": "subnet-05cf9d7348b0f5226"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.private",
            "module.project_vpc.aws_subnet.private",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b69a2e52f2d0a6",
            "route_table_id": "rtb-05255e2b1afa567d3",
            "subnet_id": "subnet-0e8a1e3dbc25c6da3"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.public",
            "module.project_vpc.aws_subnet.public",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea8673b69b095e9b",
            "route_table_id": "rtb-05255e2b1afa567d3",
            "subnet_id": "subnet-002dad8495f0c9000"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.public",
            "module.project_vpc.aws_subnet.public",
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:subnet/subnet-06f2778a9803bbf54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f2778a9803bbf54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823796879023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-private-ap-northeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-private-ap-northeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:subnet/subnet-05cf9d7348b0f5226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf9d7348b0f5226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823796879023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-private-ap-northeast-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-private-ap-northeast-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:subnet/subnet-0e8a1e3dbc25c6da3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a1e3dbc25c6da3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823796879023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:subnet/subnet-002dad8495f0c9000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002dad8495f0c9000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823796879023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0517acc9ffa2425a7"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.this",
            "module.project_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823796879023:vpc/vpc-0517acc9ffa2425a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055420aa69e6dce14",
            "default_route_table_id": "rtb-02f4dffc1e68c75ec",
            "default_security_group_id": "sg-062fac126ff56817c",
            "dhcp_options_id": "dopt-0b40dfbb6f37bbf82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0517acc9ffa2425a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f4dffc1e68c75ec",
            "owner_id": "823796879023",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}